--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
     "bootstrap": "3.3.5",
-    "mapbox-gl": "^0.39.1"
+    "express": "^4.15.4",
+    "mapbox-gl": "^0.39.1",
+    "morgan": "^1.8.2",
+    "pg": "^4.5.3",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.5.0"
   },
   "devDependencies": {
     "css-loader": "^0.28.4",
