--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
-    "bootstrap": "3.3.5",
+    "bootstrap": "^3.3.5",
     "express": "^4.15.4",
     "mapbox-gl": "^0.39.1",
     "morgan": "^1.8.2",
-    "pg": "^4.5.3",
+    "pg": "^4.5.7",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.5.0"
   },
