deploy first time

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start:dev": "webpack -w & nodemon server/app.js",
-    "start": "npm run start:dev"
+    "start": "node server/app.js"
   },
   "license": "MIT",
   "dependencies": {
